# nyc_taxi-demand_and_fare_intelligence

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-airflow.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
app/streamlit/: Home.py  data_loader.py
config/: airflow.env  local.example.env  spark.env  streamlit.env
dags/: _dag_params.py  bronze_ingestion_dag.py  nyc_taxi_mvp_dag.py  tasks_bronze.py  tasks_ml.py  tasks_processing.py
specs/001-taxi-demand-intelligence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/common/: data_checks.py  lakehouse_manifests.py  logging_utils.py  paths.py  read_gold_artifacts.py  settings.py
src/ingestion/: __init__.py  batch_registry.py  bronze_pipeline.py  downloader.py  period_config.py  source_catalog.py
src/ml/: build_training_slice.py  evaluate_forecast.py  generate_forecast.py  run_ml_pipeline.py  train_baseline_model.py  write_ml_outputs.py
src/processing/: __init__.py  analytics_views.py  bronze_to_silver.py  build_gold_daily_zone.py  derive_trip_features.py  filter_invalid_trips.py  read_bronze.py  silver_to_gold.py  validate_bronze_schema.py  validate_gold_contract.py  write_gold.py  write_silver.py
tests/data_quality/: test_bronze_artifacts.py  test_gold_contract.py  (+8 more)
(+25 files in other folders)
