[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-demand-and-fare-intelligence"
version = "0.1.0"
description = "Local MVP platform for NYC Taxi demand and fare intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyarrow>=17.0.0",
  "PyYAML>=6.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyspark>=3.5.0,<4.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]
